--- a/DreamTeamProj/.classpath
+++ b/DreamTeamProj/.classpath
@@ -5,14 +5,14 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/Log4j"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/gson"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/mysql"/>
-	<classpathentry exported="true" kind="lib" path="/home/maxim/Downloads/cache libs/gson-2.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/maxim/Downloads/cache libs/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/maxim/Downloads/cache libs/mysql-connector-java-5.0.8/mysql-connector-java-5.0.8-bin.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/maxim/Downloads/cache libs/javax.servlet-3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.36-bin.jar"/>
+	<classpathentry kind="lib" path="/home/maxim/Downloads/cache libs/javax.servlet-3.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
