--- a/DreamTeamProj/.classpath
+++ b/DreamTeamProj/.classpath
@@ -17,5 +17,14 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/DreamTeam"/>
+	<classpathentry kind="lib" path="D:/Users/Max/Documents/cache/DreamTeamProj/WebContent/WEB-INF/lib/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Max/Documents/cache/DreamTeamProj/WebContent/WEB-INF/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Max/Documents/cache/DreamTeamProj/WebContent/WEB-INF/lib/mysql-connector-java-5.1.36-bin.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Max/Documents/cache/DreamTeamProj/WebContent/WEB-INF/lib/poi-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Max/Documents/cache/DreamTeamProj/WebContent/WEB-INF/lib/poi-excelant-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Max/Documents/cache/DreamTeamProj/WebContent/WEB-INF/lib/poi-ooxml-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Max/Documents/cache/DreamTeamProj/WebContent/WEB-INF/lib/poi-ooxml-schemas-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Max/Documents/cache/DreamTeamProj/WebContent/WEB-INF/lib/poi-scratchpad-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Max/Documents/cache/DreamTeamProj/WebContent/WEB-INF/lib/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
