--- a/DreamTeamProj/src/main/webapp/package.json
+++ b/DreamTeamProj/src/main/webapp/package.json
@@ -33,5 +33,7 @@
     "tiny-lr": "^0.2.1",
     "wiredep": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-load-plugins": "^1.2.0"
+  }
 }
