--- a/DreamTeamProj/src/main/webapp/WEB-INF/web.xml
+++ b/DreamTeamProj/src/main/webapp/WEB-INF/web.xml
@@ -4,75 +4,48 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          id="WebApp_ID" version="3.0">
 
-  <display-fullname>DreamTeamProj</display-fullname>
-
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-  </welcome-file-list>
-
-  <resource-ref>
-    <res-ref-fullname>jdbc/my_db</res-ref-fullname>
-    <res-type>javax.sql.DataSource</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
-
-  <!--<listener>-->
-    <!--<listener-class>-->
-      <!--ua.nure.cache.service.MainListener-->
-    <!--</listener-class>-->
-  <!--</listener>-->
+  <display-name>DreamTeamProj</display-name>
 
   <filter>
-    <filter-fullname>PreProcessFilter</filter-fullname>
+    <filter-name>PreProcessFilter</filter-name>
     <filter-class>ua.nure.cache.filters.PreProcessFilter</filter-class>
   </filter>
 
   <filter-mapping>
-    <filter-fullname>PreProcessFilter</filter-fullname>
+    <filter-name>PreProcessFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
   <servlet>
-    <servlet-fullname>mvc-dispatcher</servlet-fullname>
+    <servlet-name>mvc-dispatcher</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextClass</param-name>
+      <param-value>
+        org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+      </param-value>
+    </init-param>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>ua.nure.cache.config.Config</param-value>
+    </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-fullname>mvc-dispatcher</servlet-fullname>
-    <url-pattern>/</url-pattern>
+    <servlet-name>mvc-dispatcher</servlet-name>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
-
-  <!--<servlet>-->
-    <!--<servlet-fullname>MainServlet</servlet-fullname>-->
-    <!--<servlet-class>ua.nure.cache.servlet.legacy.MainServlet</servlet-class>-->
-  <!--</servlet>-->
-
-  <!--<servlet-mapping>-->
-    <!--<servlet-fullname>MainServlet</servlet-fullname>-->
-    <!--<url-pattern>/project/*</url-pattern>-->
-  <!--</servlet-mapping>-->
-
-  <listener>
-    <listener-class>
-      org.springframework.web.context.ContextLoaderListener
-    </listener-class>
-  </listener>
-
-  <context-param>
-    <param-fullname>contextConfigLocation</param-fullname>
-    <param-value>/WEB-INF/mvc-dispatcher-servlet.xml</param-value>
-  </context-param>
 
   <!-- Spring Security -->
   <filter>
-    <filter-fullname>springSecurityFilterChain</filter-fullname>
+    <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy
     </filter-class>
   </filter>
 
   <filter-mapping>
-    <filter-fullname>springSecurityFilterChain</filter-fullname>
+    <filter-name>springSecurityFilterChain</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
