--- a/DreamTeamProj/src/main/webapp/bower.json
+++ b/DreamTeamProj/src/main/webapp/bower.json
@@ -31,7 +31,9 @@
     "pure": "purecss#~0.6.0",
     "spin.js": "~2.3.2",
     "jquery-file-download": "~1.4.4",
-    "angular-bootstrap": "~0.14.3"
+    "angular-bootstrap": "~0.14.3",
+    "angular-ladda": "~0.3.1",
+    "angular-messages": "~1.4.9"
   },
   "overrides": {
     "bootstrap": {
