--- a/DreamTeamProj/src/main/webapp/package.json
+++ b/DreamTeamProj/src/main/webapp/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.11.0",
     "connect-livereload": "^0.5.4",
     "connect-modrewrite": "^0.8.2",
@@ -16,6 +17,7 @@
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-embedlr": "^0.5.2",
@@ -25,8 +27,10 @@
     "gulp-jshint": "^2.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-print": "^2.0.1",
     "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "^1.6.0",
     "jshint": "^2.9.1-rc2",
     "lodash": "^3.10.1",
     "main-bower-files": "^2.11.0",
