--- a/DreamTeamProj/src/main/webapp/bower.json
+++ b/DreamTeamProj/src/main/webapp/bower.json
@@ -33,7 +33,8 @@
     "jquery-file-download": "~1.4.4",
     "angular-bootstrap": "~0.14.3",
     "angular-ladda": "~0.3.1",
-    "angular-messages": "~1.4.9"
+    "angular-messages": "~1.4.9",
+    "angular-validation-match": "~1.7.1"
   },
   "overrides": {
     "bootstrap": {
