--- a/DreamTeamProj/src/main/webapp/package.json
+++ b/DreamTeamProj/src/main/webapp/package.json
@@ -31,9 +31,11 @@
     "gulp-print": "^2.0.1",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uncss": "^1.0.4",
     "jshint": "^2.9.1-rc2",
     "lodash": "^3.10.1",
     "main-bower-files": "^2.11.0",
+    "run-sequence": "^1.1.5",
     "tiny-lr": "^0.2.1",
     "wiredep": "^3.0.0"
   },
