Implemented creating new project, created generic crud service

--- a/DreamTeamProj/pom.xml
+++ b/DreamTeamProj/pom.xml
@@ -200,6 +200,7 @@
                 <version>2.2</version>
                 <configuration>
                     <path>/</path>
+                    <contextReloadable>true</contextReloadable>
                     <server>
                         <id>my-tomcat</id>
                         <username>manager</username>
