--- a/DreamTeamProj/src/main/resources/application.properties
+++ b/DreamTeamProj/src/main/resources/application.properties
@@ -3,6 +3,5 @@ jdbc.url = jdbc:mysql://localhost:3306/dbproj
 jdbc.username = root
 jdbc.password = tPeFcBUWV52Y
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
-hibernate.show_sql = false
-hibernate.format_sql = false
-<property name="hibernate.current_session_context_class">thread</property>
+hibernate.show_sql = true
+hibernate.format_sql = true
