--- a/DreamTeamProj/src/main/webapp/bower.json
+++ b/DreamTeamProj/src/main/webapp/bower.json
@@ -35,7 +35,9 @@
     "angular-messages": "~1.4.9",
     "angular-validation-match": "~1.7.1",
     "restangular": "~1.5.2",
-    "angular-elastic": "~2.5.1"
+    "angular-elastic": "~2.5.1",
+    "angular-animate": "^1.5.0",
+    "angular-dragdrop": "^1.0.13"
   },
   "overrides": {
     "bootstrap": {
