--- a/DreamTeamProj/pom.xml
+++ b/DreamTeamProj/pom.xml
@@ -105,8 +105,6 @@
             <version>2.5</version>
         </dependency>
 
-        <!-- Logging -->
-
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -153,7 +151,12 @@
             <groupId>org.apache.xmlbeans</groupId>
             <artifactId>xmlbeans</artifactId>
             <version>2.4.0</version>
-            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
         </dependency>
 
         <dependency>
@@ -215,27 +218,9 @@
                         <password>pass</password>
                     </server>
                     <port>8888</port>
-                    <systemProperties>
-                        <log4j.configuration>file:src/main/resources/log4j.properties</log4j.configuration>
-                    </systemProperties>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>log4j</groupId>
-                        <artifactId>log4j</artifactId>
-                        <version>1.2.17</version>
-                    </dependency>
-                </dependencies>
             </plugin>
+
         </plugins>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <targetPath>${project.build.directory}</targetPath>
-                <includes>
-                    <include>log4j.properties</include>
-                </includes>
-            </resource>
-        </resources>
     </build>
 </project>
