--- a/DreamTeamProj/src/main/resources/log4j.properties
+++ b/DreamTeamProj/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.logger.org.hibernate=trace
+log4j.logger.org.hibernate=info
 
 log4j.appender.CATALINA.DatePattern='.'yyyy-MM-dd'.log'
 log4j.appender.CATALINA.layout.ConversionPattern = %d [%t] %-5p %c- %m%n
