--- a/DreamTeamProj/src/main/webapp/bower.json
+++ b/DreamTeamProj/src/main/webapp/bower.json
@@ -37,7 +37,9 @@
     "restangular": "~1.5.2",
     "angular-elastic": "~2.5.1",
     "angular-animate": "^1.5.0",
-    "angular-dragdrop": "^1.0.13"
+    "angular-dragdrop": "^1.0.13",
+    "pdfjs-dist": "^1.4.135",
+    "angular-pdf": "^1.3.0"
   },
   "overrides": {
     "bootstrap": {
