--- a/DreamTeamProj/src/main/webapp/bower.json
+++ b/DreamTeamProj/src/main/webapp/bower.json
@@ -38,8 +38,8 @@
     "angular-elastic": "~2.5.1",
     "angular-animate": "^1.5.0",
     "angular-dragdrop": "^1.0.13",
-    "pdfjs-dist": "^1.4.135",
-    "angular-pdf": "^1.3.0"
+    "angular-pdf": "^1.3.0",
+    "ng-file-upload": "^12.0.4"
   },
   "overrides": {
     "bootstrap": {
