--- a/DreamTeamProj/src/main/webapp/bower.json
+++ b/DreamTeamProj/src/main/webapp/bower.json
@@ -39,7 +39,8 @@
     "angular-animate": "^1.5.0",
     "angular-dragdrop": "^1.0.13",
     "angular-pdf": "^1.3.0",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "ngprogress": "^1.1.3"
   },
   "overrides": {
     "bootstrap": {
